# S3

./: README.md  interactive_demo.py  process_video.py  pyproject.toml
docs/: EVALUATION.md  INTERACTIVE.md  TRAINING.md  index.html
gui/: TIPS.md  gui.py  interactive_utils.py  main_controller.py  resource_manager.py
s3/: eval_vos.py  eval_vos_multi.py  merge_multi_scale.py  train.py
s3/config/: eval_config.yaml  eval_config_votst.yaml  gui_config.yaml
s3/config/.ipynb_checkpoints/: eval_config-checkpoint.yaml  eval_plus_config-checkpoint.yaml  train_config-checkpoint.yaml  video_config-checkpoint.yaml
s3/config/data/: datasets.yaml
s3/config/model/: adapter_depthanybase.yaml  adapter_maebase.yaml  adapter_vitbase.yaml  base.yaml  fpn_vitbase.yaml
s3/dataset/: static_dataset.py  vos_dataset.py
s3/dataset/.ipynb_checkpoints/: setup_training_data-checkpoint.py
s3/inference/: image_feature_store.py  inference_core.py  memory_manager.py  object_manager.py
s3/inference/.ipynb_checkpoints/: image_feature_store-checkpoint.py
s3/inference/data/: burst_test_dataset.py  burst_video_reader.py  vos_test_dataset.py
s3/inference/utils/: results_utils.py
s3/model/: aux_modules.py  big_modules.py  group_modules.py  losses.py  modules.py  s3.py  train_wrapper.py  trainer.py
s3/model/backbones/: adapter.py  backbones.py  backbones_reg.py  dinov2_fpn.py  position_encoding.py
s3/model/transformer/: object_summarizer.py  (+2 more)
s3/utils/: log_integrator.py
scripts/: download_models.py  merge_multi_scale.py
visualization/: python_generate_video.py
(+7 files in other folders)
